feat(portfolio): 공유 포트폴리오 생성·수정 시 작품 최소 2개 강제
기존에는 공유 포트폴리오를 작품 0개로도 생성할 수 있었다(마이페이지_
작가-R37·R38·R46, "개수 제한 없음"). 제품 결정으로 최소 2개를 요구하도록
바꾸고, PATCH로 2개 미만으로 줄이는 것도 함께 막는다. 작가 페이지는
대상이 아니다. 관련 설계 문서도 갱신.

에러코드는 FE(portfolio-manager.tsx)가 이미 참조하고 있던
PORTFOLIO_ARTWORK_MINIMUM을 그대로 사용해 프론트와 자연스럽게 맞춘다.